fix #7965 feat(nimbus): Prepare backend to support team (#7992)
Because

* We want to allow users to select the Project team and link to
experiments

This commit

* Add the capability to support choosing projects option in v5 Api- get
experiment by slug and get nimbus config

screenshot of `an experiment by slug api`

<img width="838" alt="image"
src="https://user-images.githubusercontent.com/104033388/204918992-2b3e40fc-37ae-4e23-abdc-4afc3d3ffdfa.png">

screenshot of `nimbus config api`

<img width="838" alt="image"
src="https://user-images.githubusercontent.com/104033388/204919015-f3592dd7-9e7c-4f29-8988-3417a977c6b5.png">


fix #7965
