# app/experimenter/docs/openapi-schema.json
@@ -3236,6 +3236,28 @@
               ]
             }
           },
+          "projects": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "slug": {
+                  "type": "string"
+                }
+              },
+              "required": [
+                "id",
+                "name",
+                "slug"
+              ]
+            }
+          },
           "documentationLink": {
             "type": "array",
             "items": {
@@ -3468,6 +3490,7 @@
           "countries",
           "locales",
           "languages",
+          "projects",
           "documentationLink",
           "allFeatureConfigs",
           "firefoxVersions",
